# ultrametric-antigen-AI

./: .coverage  .env.example  .flake8  .gitattributes  .gitignore  .gitmodules  ARCHITECTURE.md  AUDIT_REPORT.md  AUTHORS.md  CHANGELOG.md  CITATION.cff  CI_TEST.md  CLA.md  CLAUDE.md  CLAUDE_BIO.md  CLAUDE_DEV.md  CLAUDE_LITE.md  CONTRIBUTING.md  CONTRIBUTORS.md  COPYRIGHT_HEADER.txt  DUPLICATION_REPORT.md  GITHUB_CLEANUP_PLAN.md  INTELLECTUAL_PROPERTY_MANIFEST.md.ots  IP_COMMIT_RECORD.txt  IP_HASH_MANIFEST.json.ots  IP_TIMESTAMP_MANIFEST.sha256  IP_TIMESTAMP_MANIFEST.txt  LICENSE  MERGE_SUMMARY.md  NEXT_STEPS_DETAILED_PLAN.md  NOTICE  OBSERVABILITY_REFACTORING.md  ORGANIZATION_GITHUB_GUIDE.md  PEPTIDE_VAE_TRAINING_PLAN.md  PROJECT_STATUS_AND_ISSUES.md  PROJECT_STRUCTURE.md  README.md  SECURITY.md  SESSION.md  TENSORBOARD.md  (+18 more)
engine/: .clang-format  .clang-tidy  CHANGELOG.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  pyproject.toml
engine/benchmarks/: BENCHMARK_RESULTS_SUMMARY.md  COMPETITIVE_BENCHMARKS.md  IMPLEMENTATION_COMPLETE.md  README.md  README_COMPLETE.md  SKEPTICAL_METRICS.md  bench_bridge_layer.py  bench_canonical_fix.py  bench_conversion_breakdown.py  report.txt  test_bridge_layer_performance.py  test_falsification.py  validation-results-20251023.txt
engine/benchmarks/cpp-native-kernels/: README.md  README_GOPS.md  README_MEMORY.md  bench_dense243.cpp  bench_fusion.cpp  bench_gops_comparative.cpp  bench_kernels.cpp  bench_memory_efficiency.cpp  bench_tritnet_gemm.cpp  benchmark_main.cpp  build_gops.bat  build_gops_bench.py  build_memory_bench.bat  reference_cpp.cpp
engine/benchmarks/deprecated/: README.md  bench_backend_fusion.py  bench_backends.py  bench_backends_improved.py  bench_fusion_phase41.py  bench_fusion_poc.py  bench_fusion_rigorous.py  bench_fusion_simple.py  bench_fusion_validation.py  bench_with_load_context.py
engine/benchmarks/investigation/: README.md  analyze_phase1_datasets.py  investigate_repetitive_performance.py  test_0121_pattern.py
engine/benchmarks/macro/: README.md  RESULTS.md  bench_image_pipeline.py  bench_layer_forward.py
engine/benchmarks/prototype/: README.md  bench_gemm.py  bench_gemm_isolated.py
engine/benchmarks/python-with-interpreter-overhead/: README.md  bench_competitive.py  bench_dense243.py  bench_input_characteristics.py  bench_model_quantization.py  bench_power_efficiency.py  bench_regression_detect.py  bench_simd_core_ops.py  bench_simd_fusion_ops.py  benchmark_framework.py  build_competitive.py  download_models.py  run_all_benchmarks.py  run_competitive.bat  run_competitive.sh
engine/benchmarks/utils/: benchmark_validator.py  geometric_metrics.py  hardware_metrics.py  system_load_monitor.py  visualization.py  windows_power.py
engine/docs/: DEVELOPMENT_TOOLING.md  FEATURES.md  IP_AND_LICENSING_GUIDANCE.md  README.md  general-readme.md
engine/docs/api-reference/: error-handling.md  headers.md  source-code-overview.md  ternary-core-header.md  ternary-core-simd.md
engine/docs/architecture/: ARCHITECTURE_EVOLUTION.md  BRIDGE_ENDPOINTS_SPECIFICATION.md  BRIDGE_LAYER_ARCHITECTURE.md  CANONICAL_INDEXING_FIX.md  architecture.md  optimization-complexity-rationale.md  optimization-roadmap.md
engine/docs/audits/: DEAD_CODE_INVENTORY.md  DISABLED_OPTIMIZATIONS.md  README.md  REMEDIATION_GUIDE.md  TEST_COVERAGE_GAPS.md  UNUSED_INFRASTRUCTURE.md
engine/docs/build-system/: README.md  artifact-organization.md  cleanup-system.md  setup-pgo.md  setup-reference.md  setup-standard.md
engine/docs/environment/: AMD_LINUX_SETUP_GUIDE.md  README.md
engine/docs/features/: micro-vs-macro-speedup.md  optimization-leverage-report.md  phase4-fusion-plan.md  phase4-poc-readme.md
engine/docs/historical/: BACKEND_FUSION_FINDINGS.md  BASELINE-PRE-AUTOLUT.md  CANONICAL_INDEXING_ANALYSIS.md  COMPETITIVE_FINDINGS_SUMMARY.md  GEMM_DISCOVERY_2025-11-23.md  ISSUE_OPENMP_CRASHES.md  OPTIMIZATION_SUMMARY_2025-11-23.md
engine/docs/opportunities/: DEPLOYMENT_DISTRIBUTION.md  INTEGRATION_OPPORTUNITIES.md  MISSING_FEATURES.md  README.md  STRATEGIC_ROADMAP.md
engine/docs/pgo/: CLANG_INSTALLATION.md  PGO_AND_PATHS_FIX_REPORT.md  PGO_LIMITATIONS.md  README.md
engine/docs/planning/: ROADMAP.md  backend_api_design.md  v1.2.0_implementation_plan_HISTORICAL.md
engine/docs/profiling/: README.md
engine/docs/specifications/: dense243_encoding_spec.md  encoding_ecosystem_overview.md  triadsextet_encoding_spec.md
engine/models/datasets/: .gitignore
engine/models/tritnet/: run_tritnet.py  tritnet_tnot.tritnet  tritnet_tnot_history.json
engine/opentimestamps/: .gitignore  EXAMPLE_USAGE.md  QUICK_REFERENCE.md  README.md  config.json  requirements.txt  timestamp_create.py  timestamp_now.bat  timestamp_verify.py
engine/opentimestamps/timestamps/: manifest_20251123_054529.json  manifest_20251123_054529.sha512  manifest_20251125_082309.json  manifest_20251125_082309.sha512  manifest_20251125_082655.json  manifest_20251125_082655.json.ots  manifest_20251125_082655.sha512  manifest_20251128_064137.json  manifest_20251128_064137.sha512  manifest_20251216_032021.json  manifest_20251216_032021.sha512  manifest_20251216_035021.json  manifest_20251216_035021.sha512  manifest_20251216_035538.json  manifest_20251216_035538.json.ots  manifest_20251216_035538.sha512
engine/opentimestamps/transfers/: TRANSFER_20251215_GESTTALTT_TO_AIWHISPERERS.md
engine/reports/: README.md  UNDERUTILIZED_COMPONENTS.md
engine/reports/2025-12-02/: BENCHMARK_REPORT.md
engine/reports/2025-12-03/: BENCHMARK_FINDINGS.md
engine/reports/architecture/: backend_regression_analysis.md  encoding_indexing_analysis.md
engine/reports/archive/: resumen.md  review.md
engine/reports/benchmark_validation/: validation_20251126_005728.json  validation_20251126_005728.md  validation_20251126_010554.json  validation_20251126_010554.md  validation_20251126_035654.json  (+1 more)
engine/roadmap/: automaton_integration.md  optional paths.md  overview.md  prototype_roadmap.md
engine/scripts/: generate_compile_commands.py  setup_dev_environment.py
engine/tests/: README.md  run_tests.py
(+4348 files in other folders)
