# Copyright 2024-2025 AI Whisperers (https://github.com/Ai-Whisperers)
#
# Licensed under the PolyForm Noncommercial License 1.0.0
# See LICENSE file in the repository root for full license text.

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ternary-vae"
version = "5.12.4"
description = "Dual Neural VAEs for learning 3-adic algebraic structure using hyperbolic geometry"
readme = "README.md"
license = {text = "PolyForm-Noncommercial-1.0.0"}
requires-python = ">=3.10"
authors = [
    {name = "AI Whisperers", email = "support@aiwhisperers.com"}
]
keywords = [
    "variational-autoencoder",
    "hyperbolic-geometry",
    "bioinformatics",
    "p-adic",
    "codon-encoding",
    "HIV-analysis",
    "drug-resistance",
    "deep-learning",
    "pytorch",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Typing :: Typed",
]

dependencies = [
    # Core
    "torch>=2.0.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    # Hyperbolic Geometry
    "geoopt>=0.5.0",
    # Configuration
    "pyyaml>=6.0",
    # Analysis
    "scikit-learn>=1.2.0",
    "pandas>=2.0.0",
    # Progress
    "tqdm>=4.65.0",
    # CLI
    "typer>=0.9.0",
    "rich>=13.0.0",
    # Utilities
    "colorama>=0.4.6",
    "tabulate>=0.9.0",
]

[project.optional-dependencies]
viz = [
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "plotly>=5.14.0",
    "tensorboard>=2.13.0",
]
dev = [
    "pytest>=7.3.0",
    "pytest-cov>=4.1.0",
    "pytest-xdist>=3.3.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "ruff>=0.1.0",
    "mypy>=1.4.0",
    "pre-commit>=3.3.0",
]
docs = [
    "sphinx>=6.2.0",
    "sphinx-rtd-theme>=1.2.0",
    "sphinx-autodoc-typehints>=1.23.0",
    "myst-parser>=2.0.0",
]
security = [
    "pip-audit>=2.6.0",
    "bandit>=1.7.0",
]
bio = [
    "biopython>=1.81",
    "pyarrow>=12.0.0",
]
all = [
    "ternary-vae[viz,dev,docs,security,bio]",
]

[project.scripts]
ternary-vae = "src.cli:app"
tvae = "src.cli:app"

[project.urls]
Homepage = "https://github.com/Ai-Whisperers/ternary-vaes-bioinformatics"
Documentation = "https://github.com/Ai-Whisperers/ternary-vaes-bioinformatics#readme"
Repository = "https://github.com/Ai-Whisperers/ternary-vaes-bioinformatics"
Issues = "https://github.com/Ai-Whisperers/ternary-vaes-bioinformatics/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
exclude = ["tests*", "scripts*", "research*"]

[tool.setuptools.package-data]
src = ["py.typed"]

# Black configuration
[tool.black]
line-length = 120
target-version = ["py310", "py311", "py312"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.venv
    | __pycache__
    | build
    | dist
    | \.egg-info
)/
'''

# isort configuration
[tool.isort]
profile = "black"
line_length = 120
known_first_party = ["src"]
skip_gitignore = true

# Ruff configuration (migrated from ruff.toml)
[tool.ruff]
target-version = "py310"
line-length = 120
exclude = [
    "DOCUMENTATION/01_PROJECT_KNOWLEDGE_BASE/03_EXPERIMENTS_AND_LABS",
    "DOCUMENTATION/01_PROJECT_KNOWLEDGE_BASE/02_THEORY_AND_FOUNDATIONS",
    "scripts/train/archive",
    "__pycache__",
    ".git",
    "*.egg-info",
    "build",
    "dist",
    "venv",
    ".venv",
]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["E501"]
fixable = ["ALL"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["F401"]
"scripts/visualization/*" = ["E722", "E402"]
"scripts/analysis/*" = ["E722", "E402"]
"src/__init__.py" = ["E402"]
"scripts/train/*" = ["E402"]
"scripts/eval/*" = ["E402"]
"src/training/environment.py" = ["F401"]

# Pytest configuration
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "e2e: End-to-end tests",
    "slow: Slow-running tests",
    "gpu: Tests requiring GPU",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

# Coverage configuration
[tool.coverage.run]
source = ["src"]
branch = true
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/site-packages/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
show_missing = true
fail_under = 60

# MyPy configuration
[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
warn_return_any = false
warn_unused_ignores = true
check_untyped_defs = false
disallow_untyped_defs = false
show_error_codes = true
pretty = true

[[tool.mypy.overrides]]
module = ["src.visualization.*", "src.research.*", "scripts.*"]
ignore_errors = true

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false
check_untyped_defs = false
