[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ultrametric-antigen-ai"
version = "0.1.0"
description = "p-adic geometry and hyperbolic manifolds for bioinformatics research"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "AI Whisperers", email = "research@ai-whisperers.com"}
]
maintainers = [
    {name = "AI Whisperers", email = "research@ai-whisperers.com"}
]
keywords = [
    "bioinformatics",
    "p-adic",
    "hyperbolic-geometry", 
    "HIV",
    "sequence-analysis",
    "conservation",
    "alignment",
    "machine-learning"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11", 
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Mathematics",
]
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "biopython>=1.79",
    "matplotlib>=3.4.0",
    "seaborn>=0.11.0",
    "plotly>=5.0.0",
    "requests>=2.25.0",
    "beautifulsoup4>=4.9.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov",
    "black",
    "flake8",
    "mypy",
    "isort",
    "pre-commit"
]
docs = [
    "sphinx>=4.0",
    "sphinx-rtd-theme",
    "myst-parser"
]
analysis = [
    "scikit-learn>=1.0.0",
    "scipy>=1.7.0",
    "networkx>=2.6",
    "jupyter>=1.0.0",
    "ipywidgets"
]
visualization = [
    "bokeh>=2.4.0",
    "altair>=4.2.0",
    "plotly-dash>=2.0.0"
]

[project.urls]
Homepage = "https://github.com/Ai-Whisperers/ultrametric-antigen-AI"
Repository = "https://github.com/Ai-Whisperers/ultrametric-antigen-AI.git"
Documentation = "https://github.com/Ai-Whisperers/ultrametric-antigen-AI/blob/main/README.md"
"Bug Tracker" = "https://github.com/Ai-Whisperers/ultrametric-antigen-AI/issues"

[project.scripts]
hiv-analysis = "hiv_analysis.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["hiv_analysis*", "scripts*"]
exclude = ["tests*", "docs*"]

[tool.setuptools.package-data]
"*" = ["*.md", "*.txt", "*.json", "*.yaml", "*.yml"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = [
    "-ra",
    "-q", 
    "--strict-markers",
    "--strict-config",
    "--cov=hiv_analysis",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
    "--cov-fail-under=10"
]
testpaths = [
    "tests",
]
python_files = [
    "test_*.py",
    "*_test.py"
]
python_functions = [
    "test_*"
]
python_classes = [
    "Test*"
]
markers = [
    "slow: marks tests as slow (deselect with -m 'not slow')",
    "integration: marks tests as integration tests", 
    "unit: marks tests as unit tests"
]
filterwarnings = [
    "error",
    "ignore::UserWarning",
    "ignore::DeprecationWarning"
]

[tool.coverage.run]
source = ["hiv_analysis", "scripts"]
omit = [
    "*/tests/*",
    "*/test_*",
    "setup.py"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError", 
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:"
]